# agent-core-cpp

./: .clang-format  .gitignore  CMakeLists.txt  MEMORY.md  README.md  build_linux.sh  build_third_party.bat  build_third_party.sh  build_windows.bat  vcpkg.json
cmake/: toolchain-linux.cmake  toolchain-openharmony.cmake
data/context/: session_01.md
examples/jiuwenClaw/: README.md  cron_watcher.cpp  cron_watcher.h  heartbeat_manager.cpp  heartbeat_manager.h  main.cpp
examples/jiuwenClaw/templates/: AGENTS.md  HEARTBEAT.md  REACT_SYSTEM.md  SOUL.md  TOOLS.md  USER.md
examples/jiuwenClaw/tools/: cron_tool.cpp  cron_tool.h  file_state_tool.cpp  notebook_edit_tool.cpp  notebook_edit_tool.h  notify_tool.cpp  notify_tool.h
examples/jiuwenClaw/utils/: agent_response_handler.cpp  agent_response_handler.h  encoding.h  logger.cpp  logger.h
include/: agent.h  agent_export.h  builtin_tools.h  context_engine.h  model.h  resource_manager.h  skill.h  tool.h  types.h
src/: main.cpp
src/context_engine/: context_engine.cpp  context_engine.h  db_storage.cpp  db_storage.h  md_storage.cpp  md_storage.h  storage_base.cpp  storage_base.h  storage_interface.h
src/core/: agent.cpp  agent_worker.cpp  agent_worker.h  context_engine.cpp
src/models/: anthropic_model.cpp  anthropic_model.h  model.cpp  openai_model.cpp  openai_model.h
src/protocol/: mcp_client.cpp  mcp_client.h
src/resource_manager/: resource_manager.cpp
src/skills/: skill_engine.cpp  skill_engine.h
src/tools/: mcp_tool.cpp  mcp_tool.h  tool.cpp  tool_selector.cpp  tool_selector.h
src/tools/builtin_tools/: cron_tool.cpp  edit_file_tool.cpp  edit_file_tool.h  exec_tool.cpp  exec_tool.h  file_state_tool.cpp  file_state_tool.h  glob_tool.cpp  glob_tool.h  grep_tool.cpp  grep_tool.h  list_dir_tool.cpp  list_dir_tool.h  notebook_edit_tool.cpp  notebook_edit_tool.h  read_file_tool.cpp  read_file_tool.h  register_builtin_tools.cpp  skill_search_tool.cpp  skill_search_tool.h  time_info_tool.cpp  time_info_tool.h  web_fetch_tool.cpp  web_fetch_tool.h  web_search_tool.cpp  web_search_tool.h  write_file_tool.cpp  write_file_tool.h
src/utils/: data_dir.cpp  data_dir.h  encoding.cpp  encoding.h  logger.cpp  logger.h  prompt_utils.cpp  prompt_utils.h
src/workers/: agent_worker_factory.cpp  plan_execute_worker.cpp  plan_execute_worker.h  react_worker.cpp  react_worker.h  workflow_worker.cpp  workflow_worker.h
testcases/: test_builtin_tools.cpp  test_functional_tools.cpp
unittest/: main.cpp  test_agent_factory.cpp  test_context_engine.cpp  test_file_tools.cpp  test_integration.cpp  test_misc_tools.cpp  test_resource_manager.cpp  test_runner.h  test_search_tools.cpp  test_tool.cpp  test_tool_selector.cpp  test_types.cpp
